--- a/MaxBettiNumbers/html/u___Results__Count.html
+++ b/MaxBettiNumbers/html/u___Results__Count.html
@@ -9,21 +9,21 @@
 <body>
 <table class="buttons">
   <tr>
-    <td><div>next | <a href="___Maximum__Betti__Sum.html">previous</a> | forward | <a href="___Maximum__Betti__Sum.html">backward</a> | up | <a href="index.html">top</a> | <a href="master.html">index</a> | <a href="toc.html">toc</a> | <a href="http://www.math.uiuc.edu/Macaulay2/">Macaulay2 web site</a></div>
+    <td><div>next | <a href="u___Maximum__Betti__Sum.html">previous</a> | forward | <a href="u___Maximum__Betti__Sum.html">backward</a> | up | <a href="index.html">top</a> | <a href="master.html">index</a> | <a href="toc.html">toc</a> | <a href="http://www.math.uiuc.edu/Macaulay2/">Macaulay2 web site</a></div>
 
     </td>
   </tr>
 </table>
-<div><a href="index.html" title="Methods to find Maximum Betti numbers given bounds on the Hilbert function.">MaxBettiNumbers</a> :: <a href="___Results__Count.html" title="">ResultsCount</a></div>
+<div><a href="index.html" title="Methods to find maximum Betti numbers given bounds on the Hilbert function.">MaxBettiNumbers</a> :: <a href="u___Results__Count.html" title="">ResultsCount</a></div>
 <hr/>
 <div><h1>ResultsCount</h1>
 <div><!--empty documentation body--></div>
 <div class="single"><h2>Functions with optional argument named ResultsCount :</h2>
-<ul><li><span><a href="_max__Betti__Numbers_lp..._cm_sp__Results__Count_sp_eq_gt_sp..._rp.html" title="">maxBettiNumbers(..., ResultsCount => ...)</a></span></li>
+<ul><li><span><a href="u_max__Betti__Numbers_lp..._cm_sp__Results__Count_sp_eq_gt_sp..._rp.html" title="">maxBettiNumbers(..., ResultsCount => ...)</a></span></li>
 </ul>
 </div>
 <div class="waystouse"><h2>For the programmer</h2>
-<p>The object <a href="___Results__Count.html" title="">ResultsCount</a> is <span>a <a href="/usr/share/doc/Macaulay2/Macaulay2Doc/html/___Symbol.html">symbol</a></span>.</p>
+<p>The object <a href="u___Results__Count.html" title="">ResultsCount</a> is <span>a <a href="/usr/share/doc/Macaulay2/Macaulay2Doc/html/___Symbol.html">symbol</a></span>.</p>
 </div>
 </div>
 </body>
