--- a/MaxBettiNumbers/html/u_almost__Lex__Ideal.html
+++ b/MaxBettiNumbers/html/u_almost__Lex__Ideal.html
@@ -9,12 +9,12 @@
 <body>
 <table class="buttons">
   <tr>
-    <td><div><a href="___As__Tally.html">next</a> | <a href="_almost__Lex__Betti.html">previous</a> | <a href="___As__Tally.html">forward</a> | <a href="_almost__Lex__Betti.html">backward</a> | up | <a href="index.html">top</a> | <a href="master.html">index</a> | <a href="toc.html">toc</a> | <a href="http://www.math.uiuc.edu/Macaulay2/">Macaulay2 web site</a></div>
+    <td><div><a href="u___As__Tally.html">next</a> | <a href="u_almost__Lex__Betti.html">previous</a> | <a href="u___As__Tally.html">forward</a> | <a href="u_almost__Lex__Betti.html">backward</a> | up | <a href="index.html">top</a> | <a href="master.html">index</a> | <a href="toc.html">toc</a> | <a href="http://www.math.uiuc.edu/Macaulay2/">Macaulay2 web site</a></div>
 
     </td>
   </tr>
 </table>
-<div><a href="index.html" title="Methods to find Maximum Betti numbers given bounds on the Hilbert function.">MaxBettiNumbers</a> :: <a href="_almost__Lex__Ideal.html" title="Create an almost lexsegment ideal.">almostLexIdeal</a></div>
+<div><a href="index.html" title="Methods to find maximum Betti numbers given bounds on the Hilbert function.">MaxBettiNumbers</a> :: <a href="u_almost__Lex__Ideal.html" title="Create an almost lexsegment ideal.">almostLexIdeal</a></div>
 <hr/>
 <div><h1>almostLexIdeal -- Create an almost lexsegment ideal.</h1>
 <div class="single"><h2>Synopsis</h2>
@@ -89,8 +89,8 @@ o6 : Ideal of QQ[x , x , x , x , x , x ]
 </div>
 </div>
 <div class="single"><h2>See also</h2>
-<ul><li><span><a href="_almost__Lex__Betti.html" title="Betti numbers of an almost lexsegment ideal.">almostLexBetti</a> -- Betti numbers of an almost lexsegment ideal.</span></li>
-<li><span><a href="_lexsegment__Ideal.html" title="Create a lexsegment ideal.">lexsegmentIdeal</a> -- Create a lexsegment ideal.</span></li>
+<ul><li><span><a href="u_almost__Lex__Betti.html" title="Graded Betti numbers of an almost lexsegment ideal.">almostLexBetti</a> -- Graded Betti numbers of an almost lexsegment ideal.</span></li>
+<li><span><a href="u_lexsegment__Ideal.html" title="Create a lexsegment ideal.">lexsegmentIdeal</a> -- Create a lexsegment ideal.</span></li>
 </ul>
 </div>
 <div class="waystouse"><h2>Ways to use <tt>almostLexIdeal</tt> :</h2>
