--- a/MaxBettiNumbers/html/u_lex__Betti.html
+++ b/MaxBettiNumbers/html/u_lex__Betti.html
@@ -2,21 +2,21 @@
 <!-- Apache may like this line in the file .htaccess: AddCharset utf-8 .html -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 plus MathML 2.0 plus SVG 1.1//EN"	 "http://www.w3.org/2002/04/xhtml-math-svg/xhtml-math-svg.dtd" >
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head><title>lexBetti -- Betti numbers of a lexsegment ideal.</title>
+<head><title>lexBetti -- Graded Betti numbers of a lexsegment ideal.</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <link rel="stylesheet" type="text/css" href="doc.css"/>
 </head>
 <body>
 <table class="buttons">
   <tr>
-    <td><div><a href="_lex__Betti_lp..._cm_sp__As__Tally_sp_eq_gt_sp..._rp.html">next</a> | <a href="_is__Realizable.html">previous</a> | <a href="_lex__Betti_lp..._cm_sp__As__Tally_sp_eq_gt_sp..._rp.html">forward</a> | <a href="_is__Realizable.html">backward</a> | up | <a href="index.html">top</a> | <a href="master.html">index</a> | <a href="toc.html">toc</a> | <a href="http://www.math.uiuc.edu/Macaulay2/">Macaulay2 web site</a></div>
+    <td><div><a href="u_lex__Betti_lp..._cm_sp__As__Tally_sp_eq_gt_sp..._rp.html">next</a> | <a href="u_is__Realizable.html">previous</a> | <a href="u_lex__Betti_lp..._cm_sp__As__Tally_sp_eq_gt_sp..._rp.html">forward</a> | <a href="u_is__Realizable.html">backward</a> | up | <a href="index.html">top</a> | <a href="master.html">index</a> | <a href="toc.html">toc</a> | <a href="http://www.math.uiuc.edu/Macaulay2/">Macaulay2 web site</a></div>
 
     </td>
   </tr>
 </table>
-<div><a href="index.html" title="Methods to find Maximum Betti numbers given bounds on the Hilbert function.">MaxBettiNumbers</a> :: <a href="_lex__Betti.html" title="Betti numbers of a lexsegment ideal.">lexBetti</a></div>
+<div><a href="index.html" title="Methods to find maximum Betti numbers given bounds on the Hilbert function.">MaxBettiNumbers</a> :: <a href="u_lex__Betti.html" title="Graded Betti numbers of a lexsegment ideal.">lexBetti</a></div>
 <hr/>
-<div><h1>lexBetti -- Betti numbers of a lexsegment ideal.</h1>
+<div><h1>lexBetti -- Graded Betti numbers of a lexsegment ideal.</h1>
 <div class="single"><h2>Synopsis</h2>
 <ul><li><dl class="element"><dt>Usage: </dt><dd><tt>lexBetti (N, h)</tt></dd></dl>
 </li>
@@ -25,7 +25,7 @@
 </ul>
 </div>
 </li>
-<li><div class="single"><a href="/usr/share/doc/Macaulay2/Macaulay2Doc/html/_using_spfunctions_spwith_spoptional_spinputs.html">Optional inputs</a>:<ul><li><span><a href="_lex__Betti_lp..._cm_sp__As__Tally_sp_eq_gt_sp..._rp.html">AsTally => ...</a>, </span></li>
+<li><div class="single"><a href="/usr/share/doc/Macaulay2/Macaulay2Doc/html/_using_spfunctions_spwith_spoptional_spinputs.html">Optional inputs</a>:<ul><li><span><a href="u_lex__Betti_lp..._cm_sp__As__Tally_sp_eq_gt_sp..._rp.html">AsTally => ...</a>, </span></li>
 </ul>
 </div>
 </li>
@@ -33,7 +33,7 @@
 </div>
 <div class="single"><h2>Description</h2>
 <div><div><p>Consider a polynomial ring in <tt>N</tt> variables. For any hilbert function, there is a unique lexsegment ideal. Furthermore, this ideal has graded Betti numbers that are at least as large as those of any other ideal with that hilbert function.</p>
-<p>This function returns the Betti numbers of a lexsegment ideal with the given Hilbert function. Note, because only the truncated version of a Hilbert function can be represented by a list, the Hilbert function is assumed to continue as if it matches its polynomial by the end of the list. In other words, the lexsegment ideal has no generators with degree larger than <tt>#h-1</tt>.</p>
+<p>This function returns the graded Betti numbers of a lexsegment ideal with the given Hilbert function. Note, because only the truncated version of a Hilbert function can be represented by a list, the Hilbert function is assumed to continue as if it matches its polynomial by the end of the list. In other words, the lexsegment ideal has no generators with degree larger than <tt>#h-1</tt>.</p>
 </div>
 <table class="examples"><tr><td><pre>i1 : lexBetti (4, {1,2,3,3,3,3})
 
@@ -70,8 +70,8 @@ o3 : BettiTally</pre>
 </div>
 </div>
 <div class="single"><h2>See also</h2>
-<ul><li><span><a href="_lexsegment__Ideal.html" title="Create a lexsegment ideal.">lexsegmentIdeal</a> -- Create a lexsegment ideal.</span></li>
-<li><span><a href="_almost__Lex__Betti.html" title="Betti numbers of an almost lexsegment ideal.">almostLexBetti</a> -- Betti numbers of an almost lexsegment ideal.</span></li>
+<ul><li><span><a href="u_lexsegment__Ideal.html" title="Create a lexsegment ideal.">lexsegmentIdeal</a> -- Create a lexsegment ideal.</span></li>
+<li><span><a href="u_almost__Lex__Betti.html" title="Graded Betti numbers of an almost lexsegment ideal.">almostLexBetti</a> -- Graded Betti numbers of an almost lexsegment ideal.</span></li>
 </ul>
 </div>
 <div class="waystouse"><h2>Ways to use <tt>lexBetti</tt> :</h2>
