--- a/MaxBettiNumbers/html/u_max__Betti__Numbers_lp..._cm_sp__Algorithm_sp_eq_gt_sp..._rp.html
+++ b/MaxBettiNumbers/html/u_max__Betti__Numbers_lp..._cm_sp__Algorithm_sp_eq_gt_sp..._rp.html
@@ -9,19 +9,19 @@
 <body>
 <table class="buttons">
   <tr>
-    <td><div><a href="_max__Betti__Numbers_lp..._cm_sp__Hilbert__Function__Lower__Bound_sp_eq_gt_sp..._rp.html">next</a> | <a href="_max__Betti__Numbers.html">previous</a> | <a href="_max__Betti__Numbers_lp..._cm_sp__Hilbert__Function__Lower__Bound_sp_eq_gt_sp..._rp.html">forward</a> | <a href="_max__Betti__Numbers.html">backward</a> | up | <a href="index.html">top</a> | <a href="master.html">index</a> | <a href="toc.html">toc</a> | <a href="http://www.math.uiuc.edu/Macaulay2/">Macaulay2 web site</a></div>
+    <td><div><a href="u_max__Betti__Numbers_lp..._cm_sp__Hilbert__Function__Lower__Bound_sp_eq_gt_sp..._rp.html">next</a> | <a href="u_max__Betti__Numbers.html">previous</a> | <a href="u_max__Betti__Numbers_lp..._cm_sp__Hilbert__Function__Lower__Bound_sp_eq_gt_sp..._rp.html">forward</a> | <a href="u_max__Betti__Numbers.html">backward</a> | up | <a href="index.html">top</a> | <a href="master.html">index</a> | <a href="toc.html">toc</a> | <a href="http://www.math.uiuc.edu/Macaulay2/">Macaulay2 web site</a></div>
 
     </td>
   </tr>
 </table>
-<div><a href="index.html" title="Methods to find Maximum Betti numbers given bounds on the Hilbert function.">MaxBettiNumbers</a> :: <a href="_max__Betti__Numbers_lp..._cm_sp__Algorithm_sp_eq_gt_sp..._rp.html" title="">maxBettiNumbers(..., Algorithm => ...)</a></div>
+<div><a href="index.html" title="Methods to find maximum Betti numbers given bounds on the Hilbert function.">MaxBettiNumbers</a> :: <a href="u_max__Betti__Numbers_lp..._cm_sp__Algorithm_sp_eq_gt_sp..._rp.html" title="">maxBettiNumbers(..., Algorithm => ...)</a></div>
 <hr/>
 <div><h1>maxBettiNumbers(..., Algorithm => ...)</h1>
 <div class="single"><h2>Description</h2>
-<div><div><p>There are two algorithms that can be used to find the upper bounds given in <a href="_max__Betti__Numbers.html" title="Upper bounds for total Betti numbers in a family of saturated ideals.">maxBettiNumbers</a>.</p>
+<div><div><p>There are two algorithms that can be used to find the upper bounds given in <a href="u_max__Betti__Numbers.html" title="Upper bounds for total Betti numbers in a family of saturated ideals.">maxBettiNumbers</a>.</p>
 <p>The &ldquo;Simplified&rdquo; algorithm simply finds the maximum of while ignoring the ideal structure of an ideal. In other words, it searches all possible numeric functions instead of just the Hilbert functions. This has two consequences. First, it is significantly faster because it allows for a simplification of the algorithm. Second, it does not always give the smallest upper bounds. However, there is one instance where it is guarenteed to give the smallest upper bounds: when no upper bound for the Hilbert function is specified.</p>
 <p>The &ldquo;Complete&rdquo; algorithm does not make this simplification, and as a result, is slower but give the smallest upper bounds in every situation.</p>
-<p>Ideally, we would like to use the &ldquo;Simplified&rdquo; algorithm when it gives the smallest upper bounds, and use the &ldquo;Complete&rdquo; algorithm otherwise. By default, the algorithm is selected that guarentees the smallest upper bounds. However, this can be overridden by passing the <tt>Algorithm</tt> option to <a href="_max__Betti__Numbers.html" title="Upper bounds for total Betti numbers in a family of saturated ideals.">maxBettiNumbers</a>. The possible values are</p>
+<p>Ideally, we would like to use the &ldquo;Simplified&rdquo; algorithm when it gives the smallest upper bounds, and use the &ldquo;Complete&rdquo; algorithm otherwise. By default, the algorithm is selected that guarentees the smallest upper bounds. However, this can be overridden by passing the <tt>Algorithm</tt> option to <a href="u_max__Betti__Numbers.html" title="Upper bounds for total Betti numbers in a family of saturated ideals.">maxBettiNumbers</a>. The possible values are</p>
 <ul><li><tt>&quot;Automatic&quot;</tt> - this is the default and chooses the algorithm to use based on the other inputs. Note: This will always give the smallest upper bounds as well as valid Hilbert functions.</li>
 <li><tt>&quot;Simplified&quot;</tt> - forces use of the &ldquo;Simplified&rdquo; algorithm. Note: if this option is passed, the values in &ldquo;HilbertFunctions&rdquo; may not be actual Hilbert functions.</li>
 <li><tt>&quot;Complete&quot;</tt> - forces use of the &ldquo;Complete&rdquo; algorithm. Note: This will always give the smallest upper bounds as well as valid Hilbert functions.</li>
@@ -31,7 +31,7 @@
 </div>
 <h2>Further information</h2>
 <ul><li><span>Default value: <tt>Automatic</tt></span></li>
-<li><span>Function: <span><a href="_max__Betti__Numbers.html" title="Upper bounds for total Betti numbers in a family of saturated ideals.">maxBettiNumbers</a> -- Upper bounds for total Betti numbers in a family of saturated ideals.</span></span></li>
+<li><span>Function: <span><a href="u_max__Betti__Numbers.html" title="Upper bounds for total Betti numbers in a family of saturated ideals.">maxBettiNumbers</a> -- Upper bounds for total Betti numbers in a family of saturated ideals.</span></span></li>
 <li><span>Option name: <span><a href="/usr/share/doc/Macaulay2/Macaulay2Doc/html/___Algorithm.html" title="name for an optional argument">Algorithm</a> -- name for an optional argument</span></span></li>
 </ul>
 <div class="single"><h2>Caveat</h2>
@@ -40,7 +40,7 @@
 </div>
 </div>
 <div class="single"><h2>See also</h2>
-<ul><li><span><a href="_max__Betti__Numbers.html" title="Upper bounds for total Betti numbers in a family of saturated ideals.">maxBettiNumbers</a> -- Upper bounds for total Betti numbers in a family of saturated ideals.</span></li>
+<ul><li><span><a href="u_max__Betti__Numbers.html" title="Upper bounds for total Betti numbers in a family of saturated ideals.">maxBettiNumbers</a> -- Upper bounds for total Betti numbers in a family of saturated ideals.</span></li>
 </ul>
 </div>
 </div>
